--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,6 @@ html {
   margin-bottom: 0;
 }
 
-.work-section .container {
-  background-color: #fff;
-  border-radius: 24px;
-  border: 1px solid #dfe1e6;
-}
-
 .grid-work {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
@@ -146,7 +140,17 @@ header {
   display: flex;
   flex-direction: row;
   font-size: 30px;
-  padding: 20px;
+  padding: 30px;
+  background: #fff;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  border-radius: 24px;
+  border: 1px solid #dfe1e6;
+}
+
+.work-section img {
+  width: 480px;
+  height: 500px;
 }
 
 .flex-item-left {
@@ -157,6 +161,21 @@ header {
 .flex-item-right {
   padding: 10px;
   flex: 50%;
+}
+
+.stacks li {
+  list-style: none;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #f7f7f9;
+}
+
+.grid-container > li {
+  background-color: #f7f7f9;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  width: 170px;
+  border-radius: 8px;
 }
 
 .work-title {
@@ -229,6 +248,8 @@ header {
   order: 1;
   flex-grow: 0;
   margin: 24px 0;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .btn-one {
@@ -304,25 +325,17 @@ header {
   grid-template-columns: auto auto auto;
   grid-gap: 10px;
   padding: 10px;
+  border: 0;
   background: transparent;
 }
 
-.grid-container > div {
-  background-color: #f7f7f9;
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-  width: 170px;
-  border-radius: 8px;
-}
-
-.grid-container > div img {
+.grid-container > li img {
   position: relative;
   top: -12px;
   left: -18px;
 }
 
-.grid-container > div p {
+.grid-container > li p {
   font-size: 18px;
   padding-top: 8px;
 }
@@ -331,16 +344,13 @@ header {
   padding-top: 30px;
 }
 
-.stacks ul li {
-  list-style: none;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  border-bottom: 2px solid #f7f7f9;
-}
-
 .section-contact button {
   display: flex;
   justify-content: center;
+}
+
+textarea {
+  width: 537px;
 }
 
 @media (max-width: 800px) {
@@ -379,5 +389,28 @@ header {
 
   .btn-contact {
     background: #fff;
+  }
+
+  .description {
+    padding: 40px;
+    position: static;
+    width: auto;
+    left: 24px;
+    top: 146px;
+    margin-bottom: 15px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    color: #344563;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    word-break: break-all;
+    word-wrap: break-word;
+  }
+
+  textarea {
+    width: auto;
   }
 }
