--- a/css/style.css
+++ b/css/style.css
@@ -6,111 +6,352 @@
 
 html {
   background: #e5e5e5;
-}
-
-.container {
-  background-color: #fff;
-}
-
-.navbar-light .navbar-brand {
-  color: #5571fe;
-  font-size: 18px;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
-  font-size: 18px;
-  color: rgba(0, 0, 0, 0.9);
-}
-
-.navbar-toggler-icon {
-  color: #5571fe;
-  border-color: #fff;
-}
-
-.navbar-light .navbar-toggler {
-  border-color: white;
-  color: #5571fe;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: #e5e5e5;
-  font-style: normal;
-  font-size: 20px;
   font-weight: normal;
-  line-height: 28px;
-}
-
-header {
-  background-color: #fff;
-}
-
-.primary-text {
-  position: static;
-  width: 920px;
-  font-family: 'Poppins', sans-serif;
-  height: 122px;
-  left: 0;
-  top: 0;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 48px;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.37px;
   color: #091e42;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin: 12px 0;
 }
 
-.section-about {
+.container {
+  max-width: 900px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.navbar {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-list {
+  list-style-type: none;
+  width: 100%;
+  text-align: center;
+  padding-top: 15px;
+  display: none;
+}
+
+.nav-list .list-item {
+  display: block;
+  padding: 10px;
+  border-top: 1px solid white;
+  color: black;
+}
+
+.navbar a {
+  color: #5571fe;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.work-container a {
+  text-decoration: none;
+  color: #396df2;
+}
+
+.work-description h1 a {
+  font-size: 30px;
+  color: black;
+}
+
+.stacks li {
+  list-style: none;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #f7f7f9;
+}
+
+.stacks li a {
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.work-container > ul > li > a {
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+}
+
+.navbar a:hover {
+  color: black;
+}
+
+.logo {
+  height: 30px;
+  width: 100%;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.menu-line {
+  width: 26px;
+  height: 3px;
+  background-color: #5571fe;
+  border-bottom: 4px;
+  margin: 6px;
+}
+
+.headlines {
+  height: 598px;
   padding-top: 100px;
   padding-bottom: 100px;
   border-bottom-left-radius: 110px;
   background-image: url("../image/header_background.png");
 }
 
-.section-about .container {
-  background-color: transparent;
+.headline-text {
+  padding-top: 80px;
+  padding-left: 15px;
 }
 
-.section-about img {
-  width: 100%;
+.headline-text p {
   height: auto;
-  border-radius: 50%;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.section-one .content {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 20px;
-}
-
-.btn-connect {
+.primary-text {
   position: static;
-  width: 117px;
-  height: 24px;
-  left: 0;
-  top: 0;
+  width: 920px;
+  height: 52px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 35px;
+  letter-spacing: 0.37px;
+  color: #091e42;
+  margin: 40px 10px 30px 0;
+  font-size: 35px;
+}
+
+.btn-connect h6 {
+  font-size: 25px;
+  color: #007bff;
+  font-weight: 200;
+}
+
+a.btn-connect {
+  text-decoration: none;
+}
+
+.medium {
+  list-style-type: none;
+}
+
+.medium .social-media {
+  display: inline-block;
+  border-top: 1px solid white;
+  text-decoration: none;
+}
+
+.medium i {
+  color: #505f79;
+  font-size: 21px;
+  padding-top: 10px;
+  padding-right: 8px;
+}
+
+.work-section {
+  background-color: transparent;
+  padding: 10px;
+}
+
+.work-section-wrapper {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #e5e5e5;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+}
+
+.grid-container img,
+.grid-container p {
+  display: inline;
+}
+
+.grid-container > li {
+  background-color: #f7f7f9;
+  font-size: 10px;
+  width: 450px;
+  border-radius: 8px;
+  padding: 30px;
+}
+
+.grid-container > li img {
+  position: relative;
+  bottom: -12px;
+  left: -2px;
+  height: 50px;
+  width: 50px;
+}
+
+.grid-container > li p {
+  font-size: 22px;
+  padding-top: 8px;
+  font-weight: 400;
+}
+
+.stacks {
+  padding-top: 30px;
+}
+
+.work-container {
+  width: 100%;
+  padding: 2rem;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: white;
+  border: 2px solid #e5e5e5;
+  list-style-type: none;
+  border-radius: 24px;
+}
+
+.work-container > ul {
+  display: grid;
+  list-style-type: none;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 1rem;
+}
+
+.work-container > ul > li {
+  border-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  position: relative;
+}
+
+.work-container > ul > li > img {
+  width: 100%;
+}
+
+.work-container > ul > li > p {
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 1.2rem 0;
+  color: #666;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(620px, 1fr));
+  align-items: center;
+  grid-gap: 10px;
+  padding: 10px;
+  border: 0;
+  background: transparent;
+}
+
+.work-info ul li {
+  display: inline;
+  list-style: none;
+  padding-bottom: 30px;
+  padding-right: 7px;
+  color: #c1c7d0;
+  font-size: 20px;
+}
+
+.work-info ul li i {
+  font-size: 10px;
+}
+
+.intro {
   text-transform: uppercase;
 }
 
-.twitter {
-  background: #505f79;
+.tags ul li {
+  display: inline;
+  align-items: center;
+  background: #ebebff;
+  border-radius: 8px;
+  width: 49px;
+  height: 20px;
+  font-size: 15px;
+  padding: 4px 12px;
+  color: #6070ff;
 }
 
-.media {
-  display: flex;
-  justify-content: flex-start;
-  list-style: none;
-  margin-right: 100px;
+.btn-one {
+  border: 1px solid #396df2;
+  padding: 7px;
+  border-radius: 4%;
+  font-size: 17px;
+  font-weight: 300;
+  text-transform: capitalize;
 }
 
-.media a {
-  margin-right: 16px;
-  font-size: 21px;
-  color: #505f79;
+.btn-two {
+  border: 1px solid #4053fc;
+  background: #4053fc;
+  padding: 7px;
+  border-radius: 4%;
+  font-size: 17px;
+  font-weight: 300;
+  text-transform: capitalize;
+}
+
+a.btn-one {
+  text-decoration: none;
+  color: #4053fc;
+}
+
+a.btn-two {
+  color: #fff;
+  text-decoration: none;
+}
+
+.tags {
+  margin-bottom: 30px;
+}
+
+.section-about {
+  background-color: white;
+  border-top-right-radius: 100px;
+}
+
+.section-about h1 {
+  position: static;
+  width: 920px;
+  height: 52px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 35px;
+  letter-spacing: 0.37px;
+  color: #091e42;
+  margin: 40px 10px 30px 0;
+  font-size: 35px;
+}
+
+.about-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+  grid-gap: 20px;
+  align-items: center;
+}
+
+.about-grid > article {
+  padding-bottom: 50px;
+}
+
+@media all and (max-width: 480px) {
+  .navbar {
+    flex-direction: column;
+  }
+
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+  }
 }
