--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ html {
 body {
   font-weight: normal;
   color: #091e42;
+  font-size: 20px;
 }
 
 .container {
@@ -26,34 +27,6 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-.navbar {
-  background-color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.nav-list {
-  list-style-type: none;
-  width: 100%;
-  text-align: center;
-  padding-top: 15px;
-  display: none;
-}
-
-.nav-list .list-item {
-  display: block;
-  padding: 10px;
-  border-top: 1px solid white;
-  color: black;
-}
-
-.navbar a {
-  color: #5571fe;
-  text-decoration: none;
-  font-size: 20px;
 }
 
 .work-container a {
@@ -78,9 +51,21 @@ body {
   color: black;
 }
 
+.contact img {
+  width: 50%;
+  margin: 0 auto;
+}
+
 .work-container > ul > li > a {
   padding: 0.5rem 1rem;
   margin: 0.5rem;
+}
+
+.navbar {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .navbar a:hover {
@@ -119,6 +104,7 @@ body {
   height: auto;
   padding-top: 5px;
   padding-bottom: 5px;
+  padding-right: 40px;
 }
 
 .primary-text {
@@ -182,8 +168,8 @@ a.btn-connect {
 
 .grid-container > li {
   background-color: #f7f7f9;
-  font-size: 10px;
-  width: 450px;
+  font-size: 21px;
+  width: 390px;
   border-radius: 8px;
   padding: 30px;
 }
@@ -194,12 +180,6 @@ a.btn-connect {
   left: -2px;
   height: 50px;
   width: 50px;
-}
-
-.grid-container > li p {
-  font-size: 22px;
-  padding-top: 8px;
-  font-weight: 400;
 }
 
 .stacks {
@@ -236,7 +216,6 @@ a.btn-connect {
 }
 
 .work-container > ul > li > p {
-  font-size: 1rem;
   line-height: 1.5;
   padding: 1.2rem 0;
   color: #666;
@@ -317,6 +296,7 @@ a.btn-two {
 .section-about {
   background-color: white;
   border-top-right-radius: 100px;
+  padding-bottom: 140px;
 }
 
 .section-about h1 {
@@ -343,9 +323,269 @@ a.btn-two {
   padding-bottom: 50px;
 }
 
-@media all and (max-width: 480px) {
+.contact {
+  display: flex;
+  flex-direction: column;
+  background-image: url("../image/header_background-b.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  width: 100%;
+  border-top-left-radius: 100px;
+}
+
+.contact h2 {
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  padding-top: 59px;
+  text-align: center;
+}
+
+.contact-p {
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  padding-top: 12px;
+  color: #ebebff;
+  margin: 12px 0;
+  text-align: center;
+}
+
+.contact form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact input {
+  height: 48px;
+  width: 480px;
+  border-radius: 2px;
+  padding-left: 10px;
+  margin: 12px 24px 11px 28px;
+  background-color: #fff;
+  border: 1px solid #cfd8dc;
+}
+
+.contact input::placeholder {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: normal;
+  font-style: normal;
+  color: #172b4d;
+}
+
+.contact textarea {
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  text-align: left;
+  width: 480px;
+  height: 170px;
+  border-radius: 2px;
+  margin: 12px 24px 11px 28px;
+  background-color: #fff;
+  border: 1px solid #cfd8dc;
+  padding-left: 10px;
+}
+
+.contact textarea::placeholder {
+  color: #b3bac5;
+  position: relative;
+  padding-top: 10px;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.contact button {
+  height: 48px;
+  width: 150px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: 0;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 12px 16px;
+  color: #6070ff;
+  background-color: #fff;
+  position: static;
+  top: 347px;
+  left: 154px;
+  margin: 27px 0;
+  border: 1px solid #7f8cff;
+}
+
+button:disabled,
+button[disabled] {
+  background: #fff;
+  color: #5e6c84;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+}
+
+.contact button:hover {
+  background: #6070ff;
+  color: white;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+}
+
+.contact button:focus {
+  background: #2230d2;
+  color: white;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+}
+
+.contact button :active {
+  color: purple;
+}
+
+@media only screen and (min-width: 992px) {
+  /* Desktop version */
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 160px;
+  }
+
+  .nav-list {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding-top: 15px;
+  }
+
+  .nav-list .list-item {
+    display: inline-block;
+    padding: 10px;
+    border-top: 1px solid white;
+    color: black;
+  }
+
+  .navbar a {
+    color: #5571fe;
+    text-decoration: none;
+    font-size: 20px;
+  }
+
+  .list-item a {
+    color: #344563;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .work-container {
+    width: 1000px;
+  }
+
+  .grid-container {
+    display: grid;
+    align-content: center;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
+    padding: 10px;
+    border: 0;
+    background: transparent;
+  }
+
+  .grid-container > li {
+    background-color: #f7f7f9;
+    text-align: center;
+    font-size: 30px;
+    width: 145px;
+    height: 150px;
+    border-radius: 8px;
+  }
+
+  .grid-container > li img {
+    position: relative;
+    top: -12px;
+    left: -42px;
+  }
+
+  .grid-container > li p {
+    font-size: 18px;
+    padding-top: 8px;
+  }
+
+  /* Style for Pair elements */
+  .work-section-wrapper li:nth-child(2n) .work-pro {
+    background-color: transparent;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .work-section-wrapper li:nth-child(2n) .work-pro img {
+    background-color: transparent;
+    width: 460px;
+  }
+
+  .work-section-wrapper li:nth-child(2n) .work-pro .work-description {
+    background-color: transparent;
+  }
+
+  /* style for impair elements */
+  .work-section-wrapper li:nth-child(2n+1) .work-pro img {
+    background-color: transparent;
+    width: 460px;
+  }
+
+  .work-section-wrapper li:nth-child(2n+1) .work-pro .work-description {
+    background-color: transparent;
+  }
+
+  .section-about {
+    height: 924px;
+    position: relative;
+    bottom: -100px;
+  }
+
+  .contact {
+    position: relative;
+    left: 0;
+    height: 846px;
+    background: #6070ff;
+  }
+
+  .contact-container {
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+}
+
+@media only screen and (max-width: 769px) {
+  /* for mobile phone */
   .navbar {
     flex-direction: column;
+  }
+
+  .nav-list {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding-top: 15px;
+    display: none;
+  }
+
+  .nav-list .list-item {
+    display: block;
+    padding: 10px;
+    border-top: 1px solid white;
+    color: black;
+  }
+
+  .navbar a {
+    color: #5571fe;
+    text-decoration: none;
+    font-size: 20px;
   }
 
   .menu {
@@ -353,5 +593,13 @@ a.btn-two {
     position: absolute;
     right: 15px;
     top: 15px;
+  }
+
+  .contact input {
+    width: 320px;
+  }
+
+  .contact textarea {
+    width: auto;
   }
 }
