--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,41 @@ body {
   margin: 0;
 }
 
+.navbar {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-list {
+  list-style-type: none;
+  width: 100%;
+  text-align: center;
+  padding-top: 15px;
+}
+
+.nav-list .list-item {
+  display: inline-block;
+  padding: 10px;
+  border-top: 1px solid white;
+  color: black;
+}
+
+.navbar a {
+  color: #5571fe;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.list-item a {
+  color: #344563;
+}
+
+.menu {
+  display: none;
+}
+
 .work-container a {
   text-decoration: none;
   color: #396df2;
@@ -41,7 +76,6 @@ body {
 
 .stacks li {
   list-style: none;
-  padding-bottom: 5px;
   border-bottom: 2px solid #f7f7f9;
 }
 
@@ -61,22 +95,20 @@ body {
   margin: 0.5rem;
 }
 
-.navbar {
-  background-color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
 .navbar a:hover {
   color: black;
 }
 
 .logo {
-  width: 100px;
+  width: 180px;
   font-size: 1.8rem;
   font-weight: 700;
   color: #6070ff;
+}
+
+.logo:hover {
+  transition-duration: 1s;
+  transform: rotate(360deg);
 }
 
 .menu-line {
@@ -88,7 +120,7 @@ body {
 }
 
 .headlines {
-  height: 598px;
+  height: 916px;
   padding-top: 100px;
   padding-bottom: 100px;
   border-bottom-left-radius: 110px;
@@ -96,15 +128,14 @@ body {
 }
 
 .headline-text {
-  padding-top: 80px;
   padding-left: 15px;
+  padding-top: 100px;
 }
 
 .headline-text p {
   height: auto;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 40px;
 }
 
 .primary-text {
@@ -150,12 +181,12 @@ a.btn-connect {
 .work-section {
   background-color: transparent;
   padding: 10px;
+  margin-top: 80px;
 }
 
 .work-section-wrapper {
   display: flex;
   flex-direction: column;
-  border: 1px solid #e5e5e5;
   align-items: center;
   justify-content: center;
   list-style-type: none;
@@ -168,8 +199,8 @@ a.btn-connect {
 
 .grid-container > li {
   background-color: #f7f7f9;
-  font-size: 21px;
-  width: 390px;
+  font-size: 10px;
+  width: 450px;
   border-radius: 8px;
   padding: 30px;
 }
@@ -182,12 +213,18 @@ a.btn-connect {
   width: 50px;
 }
 
+.grid-container > li p {
+  font-size: 22px;
+  padding-top: 8px;
+  font-weight: 400;
+}
+
 .stacks {
   padding-top: 30px;
 }
 
 .work-container {
-  width: 1156px;
+  width: 100%;
   padding: 2rem;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -295,8 +332,10 @@ a.btn-two {
 
 .section-about {
   background-color: white;
+  padding-bottom: 70px;
   border-top-right-radius: 100px;
-  padding-bottom: 140px;
+  position: relative;
+  top: 40px;
 }
 
 .section-about h1 {
@@ -324,13 +363,22 @@ a.btn-two {
 }
 
 .contact {
+  position: relative;
+  left: 0;
+  background: #5571fe;
   display: flex;
+  padding: 100px;
   flex-direction: column;
-  background-image: url("../image/header_background-b.png");
+  background-image: url(../image/header_background-b.png);
   background-repeat: no-repeat;
   background-attachment: scroll;
   width: 100%;
   border-top-left-radius: 100px;
+}
+
+.contact-container {
+  padding-left: 150px;
+  padding-right: 150px;
 }
 
 .contact h2 {
@@ -368,6 +416,12 @@ a.btn-two {
   border: 1px solid #cfd8dc;
 }
 
+.contact input:hover {
+  border-radius: 8px;
+  box-shadow: 8px 8px 8px 8px black;
+  transform: translateX(30px);
+}
+
 .contact input::placeholder {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -389,6 +443,12 @@ a.btn-two {
   background-color: #fff;
   border: 1px solid #cfd8dc;
   padding-left: 10px;
+}
+
+.contact textarea:hover {
+  border-radius: 8px;
+  box-shadow: 8px 8px 8px 8px black;
+  transform: translateX(30px);
 }
 
 .contact textarea::placeholder {
@@ -433,6 +493,7 @@ button[disabled] {
   background: #6070ff;
   color: white;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  transform: translateY(30px);
 }
 
 .contact button:focus {
@@ -447,6 +508,10 @@ button[disabled] {
 
 @media screen and (min-width: 1080px) {
   /* Desktop version */
+  body {
+    background-color: #cfd8dc;
+  }
+
   .navbar {
     display: flex;
     justify-content: space-around;
@@ -472,6 +537,7 @@ button[disabled] {
     color: #5571fe;
     text-decoration: none;
     font-size: 20px;
+    margin-left: 20px;
   }
 
   .list-item a {
@@ -484,6 +550,11 @@ button[disabled] {
 
   .work-container {
     width: 1156px;
+  }
+
+  .work-container:hover {
+    box-shadow: inset 1em 1em #a7aeff;
+    transition-duration: 0.1s;
   }
 
   .grid-container {
@@ -542,21 +613,85 @@ button[disabled] {
     background-color: transparent;
   }
 
+  .work-section-wrapper li:nth-child(2n) .work-container:hover {
+    box-shadow: 1em 1em rgba(167, 174, 255, 1);
+    transition-duration: 0.1s;
+  }
+
   .section-about {
-    height: 924px;
+    height: 854px;
     position: relative;
-    bottom: -100px;
+    top: 190px;
+  }
+}
+
+@media only screen and (max-width: 769px) {
+  /* for mobile phone */
+  html {
+    overflow-x: hidden;
+  }
+
+  .navbar {
+    flex-direction: column;
+  }
+
+  .nav-list {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding-top: 15px;
+    display: none;
+  }
+
+  .nav-list .list-item {
+    display: block;
+    padding: 10px;
+    border-top: 1px solid white;
+    color: black;
+  }
+
+  .navbar a {
+    color: #5571fe;
+    text-decoration: none;
+    font-size: 20px;
+  }
+
+  .list-item a {
+    color: #344563;
+  }
+
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+  }
+
+  .section-about {
+    height: 1524px;
+    position: relative;
+    top: 200px;
   }
 
   .contact {
     position: relative;
     left: 0;
-    height: 846px;
     background: #6070ff;
+    border-top-left-radius: 100px;
   }
 
   .contact-container {
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 10px;
+
+    /* padding-right: 10px; */
+    width: 400px;
+  }
+
+  .contact input {
+    width: 350px;
+  }
+
+  .contact textarea {
+    width: 350px;
   }
 }
